<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="org.maowtm.android.standnotify.MainActivity">

    <ToggleButton
        android:id="@+id/toggleNotify"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:checked="false"
        android:onClick="handleToggle"
        android:text="@string/togNotify"
        android:textOff="@string/togNotify"
        android:textOn="@string/togNotifyOn"
        tools:text="@string/togNotify" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="false"
        android:scrollbarStyle="insideOverlay"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/nottext"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nottext"
                android:inputType="text|textShortMessage" />

            <CheckBox
                android:id="@+id/nostopcheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/nostopwhennotify" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/currentAcceleration"
                android:textAppearance="@android:style/TextAppearance.Material.Title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/x" />

            <ProgressBar
                android:id="@+id/progX"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/y" />

            <ProgressBar
                android:id="@+id/progY"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/z" />

            <ProgressBar
                android:id="@+id/progZ"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/magnitude" />

            <ProgressBar
                android:id="@+id/progM"
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:indeterminate="false"
                android:max="100"
                android:progress="0" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>
